Исправление недочетов задания

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,10 +1,20 @@
 @use "../common/variables.scss";
 @use "../common/mixins.scss";
 
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .form__field-group {
-  margin: 24px 0 48px;
+  margin-bottom: 48px;
   padding: 0;
   border: 0;
+}
+
+.form__field-group--contacts {
+  margin-bottom: 43px;
 }
 
 .form__legend {
@@ -51,23 +61,87 @@
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+
+  .form__input:placeholder-shown {
+    color: variables.$basic-black;
+    opacity: 0.3;
+  }
+
+  .form__input--textarea {
+    height: 150px;
+    max-width: 768px;
+    margin: 0 auto 33px auto;
+    resize: none;
+  }
 }
 
-// Вот тут совсем не уверена, что так можно задать цвет для плейсхолдера. Но как по-другому сделать не понимаю :(
-input::placeholder,
-textarea::placeholder {
-  color: variables.$basic-black;
-  opacity: 0.3;
+.form__list {
+  @include mixins.list-reset;
+}
+
+.form__item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  min-height: 46px;
+  padding-left: 62px;
+  cursor: pointer;
+}
+
+.form__item:not(:last-child) {
+  margin-bottom: 16px;
 }
 
 .form__controls {
+  position: relative;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
 }
 
-.form__list {
-  @include mixins.list-reset;
+.form__controls--radio::before {
+  content: "";
+  position: absolute;
+  left: -62px;
+  top: -11px;
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  background-color: variables.$color-field;
+}
+
+.form__radio:checked + .form__controls--radio::after {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: -47px;
+  width: 16px;
+  height: 16px;
+  background-color: variables.$text-gray;
+  border-radius: 50%;
+}
+
+
+.form__controls--checkbox::before {
+  content: "";
+  position: absolute;
+  left: -62px;
+  top: -11px;
+  width: 46px;
+  height: 46px;
+  border-radius: 4px;
+  background-color: variables.$color-field;
+}
+
+.form__checkbox:checked + .form__controls--checkbox::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: -49px;
+  width: 22px;
+  height: 16px;
+  background-image: url("../img/icon-tick.svg");
+  background-repeat: no-repeat;
 }
 
 .form__button-wrapper {
