--- a/source/sass/blocks/notification.scss
+++ b/source/sass/blocks/notification.scss
@@ -1,7 +1,7 @@
 .notification--error {
   padding: 45px 42px 0 42px;
 
-  .text-block__description {
+  .notification__description {
     margin-bottom: 28px;
   }
 }
@@ -9,7 +9,7 @@
 .notification--success {
   padding: 39px 37px 0 37px;
 
-  .text-block__description {
+  .notification__description {
     margin-bottom: 50px;
   }
 }
