--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -1,9 +1,9 @@
 @use "../common/mixins.scss";
 
 .gallery__text-block {
-  margin: 37px 20px 36px 20px;
+  padding: 37px 20px 36px 20px;
 
-  .text-block__title {
+  .gallery__title {
     margin: 0 0 26px;
   }
 }
