--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -1,7 +1,7 @@
 .review__text-block {
-  margin: 36px 20px 53px 20px;
+  padding: 38px 20px 51px 20px;
 
-  .text-block__title {
+  .review__title {
     margin-bottom: 24px;
   }
 }
