--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -9,3 +9,8 @@ $basic-white: #ffffff;
 $basic-black: #000000;
 $text-gray: #333333;
 $color-field: #f2f2f2;
+
+/* resolutions */
+$tablet-width: 768px;
+$desktop-width: 1200px;
+$mobile-width-only: 767px;
