--- a/source/sass/blocks/advatage.scss
+++ b/source/sass/blocks/advatage.scss
@@ -1,9 +1,11 @@
 @use "../common/variables.scss";
 
-.advantages__wrapper {
-  position: relative;
-  background-color: variables.$basic-gray;
-  counter-reset: index;
+.advantage__wrapper {
+  display: grid;
+
+  @media (min-width: variables.$tablet-width) {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .advantage {
@@ -12,7 +14,7 @@
   text-transform: uppercase;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
 }
 
 .advantage__title {
@@ -20,17 +22,31 @@
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+
+  @media (min-width: variables.$tablet-width) {
+    font-size: 21px;
+    line-height: 28px;
+  }
 }
 
 .advantage__description {
   margin: 0;
   color: variables.$text-gray;
+
+  /*@media (min-width: variables.$tablet-width) {
+    font-size: 14px;
+    line-height: 21px;
+  }*/
 }
 
 .advantage__number {
   display: inline-block;
   margin-bottom: 17px;
   color: variables.$text-gray;
+
+  @media (min-width: variables.$tablet-width) {
+    margin-bottom: 24px;
+  }
 }
 
 .advantage__section {
@@ -39,7 +55,17 @@
 }
 
 .advantage__image {
-  align-self: center;
+  display: block;
+  position: relative;
+  height: 260px;
+  width: 100%;
+  overflow: hidden;
+  object-fit: cover;
+
+  @media (min-width: variables.$tablet-width) {
+    grid-column: 2/-1;
+    height: 256px;
+  }
 }
 
 .advantage--with-img {
@@ -49,6 +75,10 @@
 
   .advantage__section {
     padding: 36px 18px 39px;
+
+    @media (min-width: variables.$tablet-width) {
+      padding: 52px 33px 29px;
+    }
   }
 
   .advantage__number {
@@ -58,11 +88,27 @@
   .advantage__description {
     color: variables.$basic-white;
   }
+
+  @media (min-width: variables.$tablet-width) {
+    grid-column: 1/-1;
+  }
 }
 
 .advantage--bridge {
   .advantage__section {
     padding: 38px 18px 36px;
+
+    @media (min-width: variables.$tablet-width) {
+      padding: 51px 32px 30px;
+      grid-column: 3/4;
+      grid-row: 1/-1;
+    }
+  }
+
+  .advantage__image {
+    @media (min-width: variables.$tablet-width) {
+      grid-column: 1/3;
+    }
   }
 }
 
@@ -74,4 +120,8 @@
 .advantage--last {
   padding: 24px 12px;
   padding-bottom: 28px;
+
+  @media (min-width: variables.$tablet-width) {
+    padding: 41px 33px;
+  }
 }
