--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -9,21 +9,54 @@
   background-repeat: no-repeat;
   background-size: cover; //320px 389px;
   background-position: center bottom;
+
+  @media (min-width: variables.$tablet-width) {
+    padding: 77px 0 91px 0;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 78px 0 90px 0;
+  }
+}
+
+.intro__slogan {
+  height: auto;
+
+  @media (min-width: variables.$tablet-width) {
+    width: 461px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    width: 459.5px;
+  }
 }
 
 .intro__text-block {
   padding: 32px 18px 51px;
+  margin: 0 auto;
+  max-width: 520px;
 
-  .text-block__title {
+  .intro__title {
     padding: 1px 13px;
   }
-}
 
+  @media (min-width: variables.$tablet-width) {
+    padding: 48px 0 55px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 59px 55px 44px;
+  }
+}
 
 .intro--other-page {
   margin-top: -56px;
 
   .intro__image {
     padding: 108px 0 67px 0;
+
+    @media (min-width: variables.$tablet-width) {
+      padding: 153px 0 114px 0;
+    }
   }
 }
