--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -6,6 +6,12 @@
   padding: 33px 18px 22px;
   align-items: center;
   background-color: variables.$basic-white;
+
+  @media (min-width: variables.$tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 33px 59px 22px;
+  }
 }
 
 .main-footer__slogan {
