--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -3,3 +3,12 @@
   justify-content: center;
   margin-bottom: 8px;
 }
+
+.map__photo {
+  display: block;
+  position: relative;
+  height: 350px;
+  width: 100%;
+  overflow: hidden;
+  object-fit: cover;
+}
