--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -7,6 +7,7 @@
 .page__body {
   min-height: 100%;
   min-width: 320px;
+  max-width: 1200px;
   margin: 0 auto;
   background-color: variables.$basic-white;
   font-family: "PT Sans", "Arial", sans-serif;
