--- a/source/sass/blocks/photo-card.scss
+++ b/source/sass/blocks/photo-card.scss
@@ -2,6 +2,14 @@
 
 .photo-card__description {
   margin: 15px 0 0;
+
+  @media (min-width: variables.$tablet-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 20px;
+    height: 80px;
+  }
 }
 
 .photo-card__title {
@@ -25,4 +33,29 @@
   flex-direction: row;
   align-items: end;
   cursor: pointer;
+}
+
+.photo-card__image {
+  display: block;
+  position: relative;
+  height: 260px;
+  width: 100%;
+  overflow: hidden;
+  object-fit: cover;
+
+  @media (min-width: variables.$tablet-width) {
+    height: 267px;
+  }
+}
+
+.photo-card--first {
+  @media (min-width: variables.$tablet-width) {
+    grid-column: 1/-1;
+  }
+
+  .photo-card__image {
+    @media (min-width: variables.$tablet-width) {
+      height: 400px;
+    }
+  }
 }
