--- a/source/sass/blocks/search-housing.scss
+++ b/source/sass/blocks/search-housing.scss
@@ -1,7 +1,13 @@
+@use "../common/variables.scss";
+
 .search-housing__wrapper {
   padding: 40px 18px 49px 18px;
   font-size: 21px;
   line-height: 26px;
+
+  @media (min-width: variables.$tablet-width) {
+    padding: 58px 18px 49px 18px;
+  }
 }
 
 .search-housing__text-block {
@@ -12,9 +18,18 @@
     margin-bottom: 20px;
     font-size: 21px;
     line-height: 26px;
+
+    @media (min-width: variables.$tablet-width) {
+      font-size: 30px;
+      margin-bottom: 33px;
+    }
   }
 
   .text-block__description {
     margin-bottom: 32px;
+
+    @media (min-width: variables.$tablet-width) {
+      margin-bottom: 42px;
+    }
   }
 }
