--- a/source/sass/blocks/text-block.scss
+++ b/source/sass/blocks/text-block.scss
@@ -11,6 +11,12 @@
   line-height: 26px;
   font-weight: 700;
   color: variables.$basic-black;
+
+  @media (min-width: variables.$tablet-width) {
+    font-size: 21px;
+    line-height: 26px;
+    margin-bottom: 27px;
+  }
 }
 
 .text-block__description {
