--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,5 +1,13 @@
+@use "../common/variables.scss";
+
 .video {
   border-top: 1px solid #e6e6e6;
+}
+
+.video__wrapper {
+  @media (min-width: variables.$tablet-width) {
+    padding: 52px 60px 40px;
+  }
 }
 
 .video__text-block {
@@ -7,8 +15,21 @@
   padding-top: 17px;
   padding-bottom: 38px;
 
+  @media (min-width: variables.$tablet-width) {
+    padding: 0;
+    padding-bottom: 90px;
+    max-width: 445px;
+    margin: 0 auto;
+  }
+
   .video__title {
     margin-bottom: 27px;
+
+    @media (min-width: variables.$tablet-width) {
+      font-size: 30px;
+      line-height: 26px;
+      margin-bottom: 33px;
+    }
   }
 }
 
@@ -18,6 +39,16 @@
 
 .video__img {
   margin: 0 auto;
+  display: block;
+  position: relative;
+  height: 260px;
+  width: 100%;
+  overflow: hidden;
+  object-fit: cover;
+
+  @media (min-width: variables.$tablet-width) {
+    height: 500px;
+  }
 }
 
 .video__icon-play {
