--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,7 +1,13 @@
+@use "../common/variables.scss";
+
 .map__wrapper {
   display: flex;
   justify-content: center;
   margin-bottom: 8px;
+
+  @media (min-width: variables.$tablet-width) {
+    margin-bottom: 0;
+  }
 }
 
 .map__photo {
