--- a/source/sass/blocks/advatage.scss
+++ b/source/sass/blocks/advatage.scss
@@ -45,7 +45,7 @@
   color: variables.$text-gray;
 
   @media (min-width: variables.$tablet-width) {
-    margin-bottom: 24px;
+    margin-bottom: 23px;
   }
 }
 
@@ -77,7 +77,19 @@
     padding: 36px 18px 39px;
 
     @media (min-width: variables.$tablet-width) {
-      padding: 52px 33px 29px;
+      padding: 50px 33px 29px;
+    }
+
+    @media (min-width: variables.$desktop-width) {
+      padding: 50px 33px 29px;
+
+      .advantage__title {
+        padding: 0 61px;
+      }
+
+      .advantage__description {
+        padding: 0 34px;
+      }
     }
   }
 
@@ -113,15 +125,43 @@
 }
 
 .advantage--has-border {
-  border-bottom: 1px solid #d6d6d6;
-  outline-offset: -1px;
+  @media (min-width: variables.$tablet-width) {
+    border-bottom: 1px solid #d6d6d6;
+    outline-offset: -1px;
+  }
+
+  .advantage__title {
+    @media (min-width: variables.$tablet-width) {
+      line-height: 26px;
+      margin-bottom: 12px;
+    }
+
+    @media (min-width: variables.$desktop-width) {
+      padding: 0 89px;
+      margin-bottom: 12px;
+    }
+  }
+
+  .advantage__description {
+    @media (min-width: variables.$tablet-width) {
+      margin-bottom: 2px;
+    }
+
+    @media (min-width: variables.$desktop-width) {
+      margin-bottom: 1px;
+    }
+  }
 }
 
 .advantage--last {
   padding: 24px 12px;
-  padding-bottom: 28px;
+  padding-bottom: 26px;
 
   @media (min-width: variables.$tablet-width) {
     padding: 41px 33px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 52px 44px;
   }
 }
