--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,9 +2,16 @@
 @use "../common/mixins.scss";
 
 .form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+
+  @media (min-width: variables.$tablet-width) {
+    grid-template-columns: 1fr 1fr;
+    padding: 0 60px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 0 120px;
+  }
 }
 
 .form__field-group {
@@ -13,8 +20,97 @@
   border: 0;
 }
 
+
+.form__field-group--introducing {
+  @media (min-width: variables.$tablet-width) {
+    margin-right: 28.5px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    margin-right: 49.5px;
+  }
+}
+
 .form__field-group--contacts {
   margin-bottom: 43px;
+
+  @media (min-width: variables.$tablet-width) {
+    margin-left: 28.5px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    margin-left: 49.5px;
+    margin-bottom: 45px;
+  }
+}
+
+.form__field-group--impression {
+  grid-column: 1/-1;
+
+  @media (min-width: variables.$desktop-width) {
+    margin-top: 7px;
+    margin-bottom: 73px;
+  }
+
+  .form__list {
+    @media (min-width: variables.$tablet-width) {
+      max-width: 575px;
+    }
+
+    @media (min-width: variables.$desktop-width) {
+      max-width: 960px;
+      padding: 0 53px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 16px;
+      margin: 0 auto;
+      margin-top: 16px;
+    }
+  }
+}
+
+.form__field-group--attractions {
+  grid-column: 1/-1;
+
+  @media (min-width: variables.$tablet-width) {
+    margin-bottom: 43px;
+  }
+
+  .form__list {
+    @media (min-width: variables.$tablet-width) {
+      max-width: 480px;
+      grid-column-gap: 32px;
+    }
+
+    @media (min-width: variables.$desktop-width) {
+      max-width: 960px;
+      padding: 0 44.5px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-gap: 16px;
+      margin: 34px auto 42px;
+    }
+  }
+
+  .form__legend {
+    @media (min-width: variables.$tablet-width) {
+      max-width: 308px;
+    }
+  }
+}
+
+.form__field-group--comment {
+  grid-column: 1/-1;
+
+  @media (min-width: variables.$tablet-width) {
+    margin-bottom: 40px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    width: 768px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+  }
 }
 
 .form__legend {
@@ -27,20 +123,31 @@
   text-transform: uppercase;
   text-align: center;
   position: relative;
+
+  @media (min-width: variables.$tablet-width) {
+    font-size: 21px;
+    margin-bottom: 28px;
+  }
 }
 
 .form__legend::before {
-  content: "";
-  position: absolute;
-  top: -25px;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background-color: #e6e6e6;
+  @media (max-width: variables.$mobile-width-only) {
+    content: "";
+    position: absolute;
+    top: -25px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #e6e6e6;
+  }
 }
 
 .form__label-group {
   margin: 0 20px;
+
+  @media (min-width: variables.$tablet-width) {
+    margin: 0;
+  }
 }
 
 .form__label {
@@ -51,12 +158,12 @@
 }
 
 .form__input {
-  width: 280px;
+  width: 100%;
+  padding: 0 16px;
+  margin-bottom: 16px;
   height: 58px;
   background: variables.$color-field;
   border: none;
-  margin-bottom: 16px;
-  padding-left: 16px;
   font-family: inherit;
   font-size: 18px;
   line-height: 26px;
@@ -66,17 +173,29 @@
     color: variables.$basic-black;
     opacity: 0.3;
   }
+}
 
-  .form__input--textarea {
-    height: 150px;
-    max-width: 768px;
-    margin: 0 auto 33px auto;
-    resize: none;
+.form__input--textarea {
+  height: 150px;
+  max-width: 768px;
+  resize: none;
+  padding-top: 16px;
+  margin: 0;
+
+  @media (min-width: variables.$tablet-width) {
+    height: 160px;
   }
 }
 
 .form__list {
   @include mixins.list-reset;
+
+  @media (min-width: variables.$tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 16px;
+    margin: 0 auto;
+  }
 }
 
 .form__item {
@@ -90,6 +209,10 @@
 
 .form__item:not(:last-child) {
   margin-bottom: 16px;
+
+  @media (min-width: variables.$tablet-width) {
+    margin: 0;
+  }
 }
 
 .form__controls {
@@ -146,6 +269,25 @@
 
 .form__button-wrapper {
   padding: 0 20px;
+  grid-column: 1/-1;
+
+  @media (min-width: variables.$tablet-width) {
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-bottom: 68px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 0 96px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-bottom: 68px;
+  }
 }
 
 .form__button {
@@ -153,6 +295,16 @@
   padding: 16px 20px;
   font-size: 21px;
   line-height: 26px;
+  margin-bottom: 27px;
+
+  @media (min-width: variables.$tablet-width) {
+    width: 324px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    width: 384px;
+  }
 }
 
 .form__note {
@@ -162,4 +314,9 @@
   font-size: 12px;
   text-transform: uppercase;
   text-align: right;
+
+  @media (min-width: variables.$tablet-width) {
+    font-size: 14px;
+    margin-top: 23px;
+  }
 }
