--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -41,11 +41,11 @@
   }
 
   @media (min-width: variables.$tablet-width) {
-    padding: 48px 0 55px;
+    padding: 48px 0 57px;
   }
 
   @media (min-width: variables.$desktop-width) {
-    padding: 59px 55px 44px;
+    padding: 60px 0 47px;
   }
 }
 
@@ -57,6 +57,10 @@
 
     @media (min-width: variables.$tablet-width) {
       padding: 153px 0 114px 0;
+    }
+
+    @media (min-width: variables.$tablet-width) {
+      padding: 159px 0 121px 0;
     }
   }
 }
