--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -12,6 +12,10 @@
     justify-content: space-between;
     padding: 33px 59px 22px;
   }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 34px 120px 22px;
+  }
 }
 
 .main-footer__slogan {
