--- a/source/sass/blocks/notification.scss
+++ b/source/sass/blocks/notification.scss
@@ -1,8 +1,35 @@
+@use "../common/variables.scss";
+
+.notification__text-block {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.notification__title {
+  margin: 0 0 35px;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  color: variables.$basic-black;
+
+  @media (min-width: variables.$tablet-width) {
+    font-size: 30px;
+    padding: 0 35px;
+    line-height: 40px;
+    margin-bottom: 27px;
+  }
+}
+
 .notification--error {
   padding: 45px 42px 0 42px;
 
   .notification__description {
     margin-bottom: 28px;
+  }
+
+  @media (min-width: variables.$tablet-width) {
+    max-width: 400px;
+    margin: 0 auto;
   }
 }
 
