--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -2,6 +2,7 @@
 
 .page {
   height: 100%;
+  background-color: variables.$color-field;
 }
 
 .page__body {
@@ -15,4 +16,7 @@
   font-weight: 400;
   line-height: 21px;
   color: variables.$basic-black;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
