--- a/source/sass/blocks/search-housing.scss
+++ b/source/sass/blocks/search-housing.scss
@@ -6,7 +6,13 @@
   line-height: 26px;
 
   @media (min-width: variables.$tablet-width) {
-    padding: 58px 18px 49px 18px;
+    padding: 58px 0 56px;
+    max-width: 458px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    padding: 60px 0 66px;
   }
 }
 
@@ -14,7 +20,7 @@
   margin: 0 auto;
   max-width: 458px;
 
-  .text-block__title {
+  .search-housing__title {
     margin-bottom: 20px;
     font-size: 21px;
     line-height: 26px;
@@ -25,11 +31,11 @@
     }
   }
 
-  .text-block__description {
+  .search-housing__description {
     margin-bottom: 32px;
 
     @media (min-width: variables.$tablet-width) {
-      margin-bottom: 42px;
+      margin-bottom: 44px;
     }
   }
 }
