--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -9,6 +9,7 @@ $basic-white: #ffffff;
 $basic-black: #000000;
 $text-gray: #333333;
 $color-field: #f2f2f2;
+$menu-current-color: #766357;
 
 /* resolutions */
 $tablet-width: 768px;
