--- a/source/sass/common/global.scss
+++ b/source/sass/common/global.scss
@@ -27,3 +27,8 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+//Не знаю куда можно такое засунуть и можно ли вообще
+.no-wrap {
+  white-space: nowrap;
+}
