--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -5,13 +5,13 @@
   padding: 37px 20px 36px 20px;
 
   @media (min-width: variables.$tablet-width) {
-    padding: 56px 10px 77px;
+    padding: 67px 10px 80px;
     max-width: 458px;
     margin: 0 auto;
   }
 
   @media (min-width: variables.$desktop-width) {
-    padding: 97px 10px 87px;
+    padding: 99px 10px 89px;
     max-width: 458px;
     margin: 0 auto;
   }
@@ -22,7 +22,7 @@
     @media (min-width: variables.$tablet-width) {
       font-size: 30px;
       line-height: 26px;
-      margin-bottom: 34px;
+      margin-bottom: 31px;
     }
   }
 }
@@ -43,8 +43,9 @@
 }
 
 .gallery__item {
-  padding: 24px 20px 25px;
+  padding: 24px 20px 26px;
   border-top: 1px solid #e5e5e5;
+  outline-offset: none;
 
   @media (min-width: variables.$tablet-width) {
     padding: 0;
