--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -9,18 +9,33 @@
   background-repeat: no-repeat;
   background-size: cover; //320px 389px;
   background-position: center bottom;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: 10;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 57px;
+    background-image: url("../img/intro-triangle-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: 100% 57px;
+  }
 
   @media (min-width: variables.$tablet-width) {
     padding: 77px 0 91px 0;
   }
 
   @media (min-width: variables.$desktop-width) {
-    padding: 78px 0 90px 0;
+    padding: 78px 0 91px 0;
   }
 }
 
 .intro__slogan {
   height: auto;
+  position: relative;
 
   @media (min-width: variables.$tablet-width) {
     width: 461px;
@@ -31,21 +46,45 @@
   }
 }
 
+.intro__title {
+  margin: 0 0 35px;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  color: variables.$basic-black;
+
+  @media (min-width: variables.$tablet-width) {
+    font-size: 21px;
+    line-height: 26px;
+    margin-bottom: 27px;
+  }
+}
+
+.intro__description {
+  margin: 0;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  color: variables.$text-gray;
+}
+
 .intro__text-block {
-  padding: 32px 18px 51px;
+  padding: 32px 18px 53px;
   margin: 0 auto;
   max-width: 520px;
+  text-align: center;
+  text-transform: uppercase;
 
   .intro__title {
     padding: 1px 13px;
   }
 
   @media (min-width: variables.$tablet-width) {
-    padding: 48px 0 57px;
+    padding: 47.5px 0 56.5px;
   }
 
   @media (min-width: variables.$desktop-width) {
-    padding: 60px 0 47px;
+    padding: 59px 0 45px;
   }
 }
 
@@ -56,11 +95,11 @@
     padding: 108px 0 67px 0;
 
     @media (min-width: variables.$tablet-width) {
-      padding: 153px 0 114px 0;
+      padding: 151px 0 117px 0;
     }
 
-    @media (min-width: variables.$tablet-width) {
-      padding: 159px 0 121px 0;
+    @media (min-width: variables.$desktop-width) {
+      padding: 159px 0 120px 0;
     }
   }
 }
