--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -5,6 +5,19 @@
   position: relative;
 }
 
+.main-nav__wrapper::after {
+  @media (max-width: variables.$mobile-width-only) {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 7px;
+    left: 0;
+    top: 216px;
+    background: linear-gradient(180deg, transparentize(variables.$basic-black, 1) 0%, transparentize(variables.$basic-black, 0.8) 100%);
+    mix-blend-mode: normal;
+  }
+}
+
 .main-nav__toggle {
   position: absolute;
   top: 0;
@@ -29,8 +42,8 @@
       &::before {
         content: "";
         position: absolute;
-        top: 16px;
-        left: 16px;
+        top: 17px;
+        left: 17px;
         width: 23px;
         height: 4px;
         background-color: variables.$primary-color;
@@ -43,7 +56,7 @@
 .main-nav--open {
   .main-nav__wrapper {
     display: block;
-    position: fixed;
+    position: absolute;
     width: 100%;
   }
 
@@ -53,9 +66,9 @@
       content: "";
       position: absolute;
       top: 25px;
-      left: 16px;
-      width: 22.9px;
-      height: 4px;
+      left: 17px;
+      width: 25.9px;
+      height: 5px;
       background-color: variables.$basic-white;
     }
 
@@ -65,6 +78,21 @@
 
     &::after {
       transform: rotate(-45deg);
+    }
+  }
+}
+
+.main-nav--nojs {
+  .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav__wrapper {
+    position: static;
+    display: block;
+
+    @media (max-width: variables.$mobile-width-only) {
+      margin-top: 100px;
     }
   }
 }
@@ -89,9 +117,13 @@
   font-weight: 700;
   line-height: 26px;
   width: 100%;
-  padding: 17px 0 12px 0;
+  padding: 18px 0 12px;
   text-decoration: none;
   text-transform: uppercase;
+
+  @media (max-width: variables.$mobile-width-only) {
+    box-shadow: inset 0 -1px 0  transparentize(variables.$basic-black, 0.8), inset 0 1px 0 transparentize(variables.$basic-white, 0.8);
+  }
 
   @media (min-width: variables.$tablet-width) {
     box-sizing: border-box;
