--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -1,18 +1,18 @@
 @use "../common/variables.scss";
 
 .review__text-block {
-  padding: 38px 20px 26px 20px;
+  padding: 37px 20px 27px 20px;
   text-align: center;
   text-transform: uppercase;
 
   @media (min-width: variables.$tablet-width) {
-    padding: 50px  0 108px;
+    padding: 62px 0 108px;
     max-width: 436px;
     margin: 0 auto;
   }
 
   @media (min-width: variables.$desktop-width) {
-    padding: 111px 0 68px;
+    padding: 114px 0 68px;
   }
 }
 
@@ -30,7 +30,7 @@
   }
 
   @media (min-width: variables.$desktop-width) {
-    margin-bottom: 36px;
+    margin-bottom: 33px;
   }
 }
 
@@ -48,4 +48,10 @@
 
 .review__form {
   padding-top: 25px;
+  padding-bottom: 23px;
+  margin: 0 20px;
+
+  @media (min-width: variables.$tablet-width) {
+    margin: 0;
+  }
 }
