--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -8,10 +8,13 @@ $page-color: #e7e5e5;
 $basic-white: #ffffff;
 $basic-black: #000000;
 $text-gray: #333333;
+$darken-grey-color: #e6e6e6;
 $color-field: #f2f2f2;
+$color-delimetr: #dbdbdb;
 $menu-current-color: #766357;
 
 /* resolutions */
 $tablet-width: 768px;
 $desktop-width: 1200px;
 $mobile-width-only: 767px;
+$tablet-width-only: 1199px;
