--- a/source/sass/blocks/photo-card.scss
+++ b/source/sass/blocks/photo-card.scss
@@ -23,7 +23,7 @@
     margin: 0;
     width: 100%;
     color: variables.$basic-white;
-    background-color: transparentize(variables.$basic-black, 0.7);// rgba(0,0,0,0.3);
+    background-color: transparentize(variables.$basic-black, 0.7);
     padding: 0 20px 0 25px;
   }
 }
