--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -11,16 +11,22 @@
 .social__item {
   width: 48px;
   height: 48px;
-  background-color: variables.$primary-color;
   display: flex;
-  padding: 12px;
 }
 
-/*
 .social__link {
+  padding: 12px;
+  box-sizing: border-box;
   background-color: variables.$primary-color;
-}
 
-.social__link--vkontakte {
-  background-image: url("../img/icon-vk.svg");
-}*/
+  &:hover,
+  &:focus {
+    background-color: variables.$primary-hover-color;
+    outline: none;
+  }
+
+  &:active {
+    background-color: variables.$primary-active-color;
+    color: transparentize(variables.$basic-white, 0.7);
+  }
+}
