--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -110,10 +110,10 @@
 
     @media (min-width: variables.$desktop-width) {
       max-width: 960px;
-      padding: 0 44.5px;
+      padding: 0 44px;
       display: grid;
-      grid-template-columns: repeat(4, min-content);
-      grid-gap: 64px;
+      grid-template-columns: repeat(4, auto);
+      grid-gap: 16px 64px;
       margin: 32px auto 44px;
     }
   }
