--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -22,7 +22,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 3;
+  z-index: 35;
   display: block;
   width: 60px;
   height: 56px;
@@ -30,6 +30,10 @@
   border: none;
   background: none;
   cursor: pointer;
+
+  @media (min-width: variables.$tablet-width) {
+    display: none;
+  }
 }
 
 .main-nav--closed {
@@ -58,6 +62,7 @@
     display: block;
     position: absolute;
     width: 100%;
+    z-index: 30;
   }
 
   .main-nav__toggle {
@@ -117,18 +122,19 @@
   font-weight: 700;
   line-height: 26px;
   width: 100%;
-  padding: 18px 0 12px;
+  //padding: 18px 0 12px;
   text-decoration: none;
   text-transform: uppercase;
 
   @media (max-width: variables.$mobile-width-only) {
+    padding: 0;
     box-shadow: inset 0 -1px 0  transparentize(variables.$basic-black, 0.8), inset 0 1px 0 transparentize(variables.$basic-white, 0.8);
   }
 
   @media (min-width: variables.$tablet-width) {
     box-sizing: border-box;
     width: 20%;
-    padding: 19px 0 16px;
+    //padding: 19px 0 16px;
     text-align: center;
     font-size: 14px;
     line-height: 21px;
@@ -136,18 +142,28 @@
 
   a {
     color: variables.$basic-white;
+    padding: 18px 0 12px;
+    display: inline-block;
+    width: 100%;
 
     @media (min-width: variables.$tablet-width) {
       color: variables.$basic-black;
       padding: 18px 0;
     }
 
-    &:hover,
+    &:hover {
+      @media (min-width: variables.$tablet-width) {
+        outline: none;
+        color: variables.$primary-color;
+        background-color: transparent;
+      }
+    }
+
     &:focus,
     &:active {
       @media (min-width: variables.$tablet-width) {
         outline: none;
-        color: #81b3d2;
+        color: transparentize(variables.$basic-black, 0.7);
         background-color: transparent;
       }
     }
