--- a/source/sass/blocks/notification.scss
+++ b/source/sass/blocks/notification.scss
@@ -1,12 +1,125 @@
 @use "../common/variables.scss";
 
+.notification {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  z-index: 20;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: transparentize(variables.$basic-black, 0.7);
+}
+
+.notification__wrapper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: variables.$basic-white;
+}
+
+
+.notification--error {
+  display: none;
+
+  .notification__wrapper {
+    width: 320px;
+    padding: 45px 42px 35px 41px;
+
+    @media (min-width: variables.$tablet-width) {
+      width: 400px;
+      padding: 54px 47px 49px 46px;
+    }
+
+    @media (min-width: variables.$desktop-width) {
+      padding: 48px 47px 49px 46px;
+    }
+  }
+
+  .notification__description {
+    margin-bottom: 28px;
+
+    @media (min-width: variables.$tablet-width) {
+      margin-bottom: 43px;
+    }
+
+    @media (min-width: variables.$desktop-width) {
+      margin-bottom: 47px;
+    }
+  }
+
+  .notification__button {
+    width: calc(100% - 55px);
+
+    @media (min-width: variables.$tablet-width) {
+      width: calc(100% - 35px);
+    }
+  }
+}
+
+.notification--success {
+  display: none;
+
+  .notification__wrapper {
+    width: 320px;
+    padding: 39px 39px 0 37px;
+
+    @media (min-width: variables.$tablet-width) {
+      width: 640px;
+      padding: 43px 99px 0 97px;
+    }
+
+    @media (min-width: variables.$desktop-width) {
+      padding: 43px 97px 0 99px;
+    }
+  }
+
+  .notification__description {
+    margin-bottom: 51px;
+
+    @media (min-width: variables.$tablet-width) {
+      margin-bottom: 52px;
+    }
+  }
+
+  .notification__button-wrapper {
+    background-color: variables.$color-field;
+    padding: 20px;
+    width: calc(100% + 76px);
+    margin-left: -37px;
+
+    @media (min-width: variables.$tablet-width) {
+      padding: 44px 91px;
+      width: calc(100% + 196px);
+      margin-left: -97px;
+    }
+
+    @media (min-width: variables.$desktop-width) {
+      margin-left: -99px;
+    }
+  }
+
+  .notification__button {
+    width: 100%;
+
+    @media (min-width: variables.$tablet-width) {
+      width: calc(100% + 18px);
+    }
+  }
+}
+
+
 .notification__text-block {
   text-align: center;
   text-transform: uppercase;
 }
 
 .notification__title {
-  margin: 0 0 35px;
+  margin: 0 0 25px;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
@@ -16,37 +129,25 @@
     font-size: 30px;
     padding: 0 35px;
     line-height: 40px;
-    margin-bottom: 27px;
+    margin-bottom: 22px;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    margin-bottom: 24px;
   }
 }
 
-.notification--error {
-  padding: 45px 42px 0 42px;
-
-  .notification__description {
-    margin-bottom: 28px;
-  }
-
-  @media (min-width: variables.$tablet-width) {
-    max-width: 400px;
-    margin: 0 auto;
-  }
-}
-
-.notification--success {
-  padding: 39px 37px 0 37px;
-
-  .notification__description {
-    margin-bottom: 50px;
-  }
+.notification__description {
+  margin: 0;
 }
 
 .notification__button {
-  margin: 0 auto 35px;
-  padding: 16px;
+  padding: 18px 0 13px 0;
   font-size: 18px;
   line-height: 26px;
-  width: calc(100% - 40px);
   max-width: 458px;
-  margin-bottom: 20px;
+
+  @media (min-width: variables.$tablet-width) {
+    font-size: 21px;
+  }
 }
