--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -44,7 +44,8 @@
     background-size: 40px 40px;
 
     @media (min-width: variables.$tablet-width) {
-      left: 88px;
+      left: 50%;
+      transform: translateX(-50%);
       top: 58px;
       width: 77px;
       height: 73px;
@@ -52,7 +53,6 @@
     }
 
     @media (min-width: variables.$desktop-width) {
-      left: 155px;
       top: 69px;
       width: 88px;
       height: 73px;
@@ -82,7 +82,8 @@
     background-size: 40px 40px;
 
     @media (min-width: variables.$tablet-width) {
-      left: 88px;
+      left: 50%;
+      transform: translateX(-50%);
       top: 58px;
       width: 80px;
       height: 73px;
@@ -90,7 +91,6 @@
     }
 
     @media (min-width: variables.$desktop-width) {
-      left: 161px;
       top: 72px;
       width: 74px;
       height: 70px;
@@ -130,7 +130,8 @@
     background-size: 40px 40px;
 
     @media (min-width: variables.$tablet-width) {
-      left: 98px;
+      left: 50%;
+      transform: translateX(-50%);
       top: 62px;
       width: 66px;
       height: 75px;
@@ -138,7 +139,6 @@
     }
 
     @media (min-width: variables.$desktop-width) {
-      left: 159px;
       top: 70px;
       width: 78px;
       height: 75px;
