--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -4,6 +4,7 @@ $primary-hover-color: #669ec0;
 $primary-active-color: #5496bd;
 $primary-disabled-color: #e5e5e5;
 $basic-gray: #eeeeee;
+$copyright-color-active: #b3b3b3;
 $page-color: #e7e5e5;
 $basic-white: #ffffff;
 $basic-black: #000000;
